--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "epns",
+  "name": "epnsstaging",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -13,6 +13,8 @@
   "dependencies": {
     "@ethersproject/shims": "^5.7.0",
     "@expo/vector-icons": "^13.0.0",
+    "@giphy/react-native-sdk": "^1.11.1",
+    "@metamask/eth-sig-util": "^5.0.0",
     "@notifee/react-native": "^5.7.0",
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/masked-view": "^0.1.11",
@@ -26,11 +28,11 @@
     "@types/dotenv": "^8.2.0",
     "@unstoppabledomains/resolution": "2.1.1",
     "@walletconnect/react-native-dapp": "1.8.0",
-    "@web3-react/walletconnect-connector": "^6.2.13",
     "assert": "^1.5.0",
     "axios": "^0.27.2",
     "base-64": "^1.0.0",
-    "crypto-js": "^4.1.1",
+    "crypto-js": "3.1.9-1",
+    "dayjs": "^1.11.5",
     "deprecated-react-native-prop-types": "^2.3.0",
     "dotenv": "^16.0.1",
     "eccrypto": "^1.1.6",
@@ -56,12 +58,15 @@
     "react": "18.0.0",
     "react-native": "0.69.4",
     "react-native-crypto": "^2.2.0",
+    "react-native-encrypted-storage": "^4.0.2",
+    "react-native-fast-openpgp": "^2.4.2",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-hash": "^3.0.0",
     "react-native-image-viewing": "^0.2.2",
     "react-native-keychain": "^8.1.1",
     "react-native-level-fs": "^3.0.1",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-material-menu": "^2.0.0",
     "react-native-os": "^1.2.6",
     "react-native-paper": "^4.12.4",
     "react-native-parsed-text": "^0.0.22",
@@ -74,6 +79,7 @@
     "react-native-sqlite-2": "^3.6.1",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "9.6.4",
+    "react-native-svg-uri": "^1.2.3",
     "react-native-tcp": "^3.2.1",
     "react-native-udp": "4.1.5",
     "react-native-video": "^6.0.0-alpha.1",
@@ -84,9 +90,9 @@
     "secp256k1-v4": "https://github.com/HarshRajat/secp256k1-node",
     "stream-browserify": "^1.0.0",
     "styled-components": "^5.3.5",
+    "text-encoding": "^0.7.0",
     "url": "^0.10.3",
-    "web3": "^1.7.5",
-    "web3-react": "^5.0.5"
+    "web3": "^1.7.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
