--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-native-keychain": "^8.1.1",
     "react-native-level-fs": "^3.0.1",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-markdown-display": "^7.0.0-alpha.2",
     "react-native-material-menu": "^2.0.0",
     "react-native-os": "^1.2.6",
     "react-native-paper": "^4.12.4",
