--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@giphy/react-native-sdk": "^1.11.1",
     "@metamask/eth-sig-util": "^5.0.0",
     "@notifee/react-native": "^5.7.0",
+    "@pushprotocol/socket": "0.2.0",
     "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-native-clipboard/clipboard": "^1.11.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "15.4.0",
     "@react-native-firebase/messaging": "15.4.0",
@@ -29,6 +31,7 @@
     "@types/dotenv": "^8.2.0",
     "@unstoppabledomains/resolution": "2.1.1",
     "@walletconnect/react-native-dapp": "1.8.0",
+    "add": "^2.0.6",
     "assert": "^1.5.0",
     "axios": "^0.27.2",
     "base-64": "^1.0.0",
@@ -95,7 +98,8 @@
     "styled-components": "^5.3.5",
     "text-encoding": "^0.7.0",
     "url": "^0.10.3",
-    "web3": "^1.7.5"
+    "web3": "^1.7.5",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
