--- a/ios/epnsstaging.xcodeproj/xcshareddata/xcschemes/push.prod.xcscheme
+++ b/ios/epnsstaging.xcodeproj/xcshareddata/xcschemes/push.prod.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1210"
+   LastUpgradeVersion = "1420"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "EPNS Staging.app"
-               BlueprintName = "push"
+               BlueprintIdentifier = "E74C05C129C06A2800C20AC1"
+               BuildableName = "push.prod.app"
+               BlueprintName = "push.prod"
                ReferencedContainer = "container:epnsstaging.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -28,16 +28,6 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "epnsstagingTests.xctest"
-               BlueprintName = "epnsstagingTests"
-               ReferencedContainer = "container:epnsstaging.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
@@ -54,9 +44,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "EPNS Staging.app"
-            BlueprintName = "push"
+            BlueprintIdentifier = "E74C05C129C06A2800C20AC1"
+            BuildableName = "push.prod.app"
+            BlueprintName = "push.prod"
             ReferencedContainer = "container:epnsstaging.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -71,9 +61,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "EPNS Staging.app"
-            BlueprintName = "push"
+            BlueprintIdentifier = "E74C05C129C06A2800C20AC1"
+            BuildableName = "push.prod.app"
+            BlueprintName = "push.prod"
             ReferencedContainer = "container:epnsstaging.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -83,7 +73,6 @@
    </AnalyzeAction>
    <ArchiveAction
       buildConfiguration = "Release"
-      customArchiveName = "epnsstaging"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
