--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/dotenv": "^8.2.0",
     "@unstoppabledomains/resolution": "2.1.1",
     "@walletconnect/react-native-dapp": "1.8.0",
+    "@walletconnect/web3-provider": "^1.8.0",
     "add": "^2.0.6",
     "assert": "^1.5.0",
     "axios": "^0.27.2",
