--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@giphy/react-native-sdk": "^1.11.1",
     "@metamask/eth-sig-util": "^5.0.0",
     "@notifee/react-native": "^5.7.0",
-    "@pushprotocol/restapi": "^0.9.0",
+    "@pushprotocol/restapi": "1.0.0",
     "@pushprotocol/socket": "0.2.0",
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-clipboard/clipboard": "^1.11.1",
@@ -67,6 +67,7 @@
     "react-native-encrypted-storage": "^4.0.2",
     "react-native-fast-openpgp": "^2.4.2",
     "react-native-gesture-handler": "^2.5.0",
+    "react-native-get-random-values": "^1.8.0",
     "react-native-hash": "^3.0.0",
     "react-native-image-viewing": "^0.2.2",
     "react-native-keychain": "^8.1.1",
@@ -91,6 +92,8 @@
     "react-native-udp": "4.1.5",
     "react-native-video": "^6.0.0-alpha.1",
     "react-native-webrtc": "1.84.1",
+    "react-native-webview": "^11.26.1",
+    "react-native-webview-crypto": "^0.0.25",
     "react-native-youtube": "^2.0.2",
     "react-redux": "^8.0.2",
     "readable-stream": "^1.0.33",
