--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android --variant=prodDebug --appId=io.epns.epns",
+    "android:prod": "react-native run-android --variant=prodDebug --appId=io.epns.epns",
+    "android:prod-release": "react-native run-android --variant=prodRelease --appId=io.epns.epns",
+    "android:staging": "react-native run-android --variant=stagingDebug --appId=io.epns.epnsstaging",
+    "android:staging-release": "react-native run-android --variant=stagingRelease --appId=io.epns.epnsstaging",
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
@@ -28,7 +31,6 @@
     "@reduxjs/toolkit": "^1.8.5",
     "@shopify/flash-list": "^1.4.0",
     "@tradle/react-native-http": "^2.0.1",
-    "@types/dotenv": "^8.2.0",
     "@unstoppabledomains/resolution": "2.1.1",
     "@walletconnect/react-native-dapp": "1.8.0",
     "add": "^2.0.6",
@@ -38,7 +40,6 @@
     "crypto-js": "3.1.9-1",
     "dayjs": "^1.11.5",
     "deprecated-react-native-prop-types": "^2.3.0",
-    "dotenv": "^16.0.1",
     "eccrypto": "^1.1.6",
     "eth-crypto": "^2.3.0",
     "ethereum-ens": "^0.8.0",
@@ -61,6 +62,7 @@
     "node-libs-browser": "^2.2.1",
     "react": "18.0.0",
     "react-native": "0.69.4",
+    "react-native-config": "^1.5.0",
     "react-native-crypto": "^2.2.0",
     "react-native-encrypted-storage": "^4.0.2",
     "react-native-fast-openpgp": "^2.4.2",
@@ -120,7 +122,6 @@
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.7.1",
-    "react-native-dotenv": "^3.3.1",
     "react-test-renderer": "18.0.0",
     "rn-nodeify": "^10.3.0",
     "typescript": "^4.4.4"
