--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -243,23 +243,34 @@ android {
             include (*reactNativeArchitectures())
         }
     }
+
     signingConfigs {
-        debug {
-            storeFile file('debug.keystore')
+        staging {
+            storeFile file('staging.keystore')
+            storePassword 'android'
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
+        }
+        prod {
+            storeFile file('prod.keystore')
             storePassword 'android'
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
     }
+
     buildTypes {
         debug {
-            signingConfig signingConfigs.debug
-            matchingFallbacks = ['debug', 'release']
+            productFlavors.staging.signingConfig signingConfigs.staging
+            productFlavors.prod.signingConfig signingConfigs.prod
+            signingConfig null
         }
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            productFlavors.staging.signingConfig signingConfigs.staging
+            productFlavors.prod.signingConfig signingConfigs.prod
+            signingConfig null
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
