firebase notification test done

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "android:prod": "react-native run-android --variant=prodDebug --appId=io.epns.epns",
     "android:prod-release": "react-native run-android --variant=prodRelease --appId=io.epns.epns",
     "android:staging": "react-native run-android --variant=stagingDebug --appId=io.epns.epnsstaging",
+    "android": "react-native run-android --variant=stagingDebug --appId=io.epns.epnsstaging",
     "android:staging-release": "react-native run-android --variant=stagingRelease --appId=io.epns.epnsstaging",
     "ios": "react-native run-ios",
     "start": "react-native start",
@@ -64,6 +65,7 @@
     "node-libs-browser": "^2.2.1",
     "react": "18.0.0",
     "react-native": "0.69.4",
+    "react-native-callkeep": "^4.3.8",
     "react-native-config": "^1.5.0",
     "react-native-crypto": "^2.2.0",
     "react-native-encrypted-storage": "^4.0.2",
