--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
     "react-native-tcp": "^3.2.1",
     "react-native-udp": "4.1.5",
     "react-native-video": "^6.0.0-alpha.1",
-    "react-native-webrtc": "106.0.7",
+    "react-native-webrtc": "1.84.1",
     "react-native-webview": "^11.26.1",
     "react-native-webview-crypto": "^0.0.25",
     "react-native-youtube": "^2.0.2",
@@ -101,6 +101,7 @@
     "readable-stream": "^1.0.33",
     "redux-persist": "^6.0.0",
     "secp256k1-v4": "https://github.com/HarshRajat/secp256k1-node",
+    "simple-peer": "^9.11.1",
     "stream-browserify": "^1.0.0",
     "styled-components": "^5.3.5",
     "text-encoding": "^0.7.0",
@@ -118,6 +119,7 @@
     "@types/react-native": "^0.69.3",
     "@types/react-native-webrtc": "^1.75.5",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/simple-peer": "^9.11.5",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
     "babel-jest": "^26.6.3",
