moved to the RNSimplePeer

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "android:prod": "react-native run-android --variant=prodDebug --appId=io.epns.epns",
     "android:prod-release": "react-native run-android --variant=prodRelease --appId=io.epns.epns",
     "android:staging": "react-native run-android --variant=stagingDebug --appId=io.epns.epnsstaging",
+    "android": "react-native run-android --variant=stagingDebug --appId=io.epns.epnsstaging",
     "android:staging-release": "react-native run-android --variant=stagingRelease --appId=io.epns.epnsstaging",
     "ios": "react-native run-ios",
     "start": "react-native start",
@@ -85,6 +86,7 @@
     "react-native-safe-area-context": "^4.3.3",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^3.17.0",
+    "react-native-simple-peer": "^0.1.5",
     "react-native-simple-toast": "^1.1.4",
     "react-native-sqlite-2": "^3.6.1",
     "react-native-status-bar-height": "^2.6.0",
