--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@metamask/eth-sig-util": "^5.0.0",
     "@notifee/react-native": "^5.7.0",
     "@pushprotocol/restapi": "1.0.1",
-    "@pushprotocol/socket": "0.2.0",
+    "@pushprotocol/socket": "latest",
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-clipboard/clipboard": "^1.11.1",
     "@react-native-community/masked-view": "^0.1.11",
