apk and aab generation scripts

--- a/package.json
+++ b/package.json
@@ -5,8 +5,16 @@
   "scripts": {
     "android:prod": "react-native run-android --variant=prodDebug --appId=io.epns.epns",
     "android:prod-release": "react-native run-android --variant=prodRelease --appId=io.epns.epns",
+    "android:prod-debug-apk": "cd android && ./gradlew assembleProdDebug && cd ..",
+    "android:prod-release-apk": "cd android && ./gradlew assembleProdRelease && cd ..",
+    "android:prod-debug-aab": "cd android && ./gradlew bundleProdDebug && cd ..",
+    "android:prod-release-aab": "cd android && ./gradlew bundleProdRelease && cd ..",
     "android:staging": "react-native run-android --variant=stagingDebug --appId=io.epns.epnsstaging",
     "android:staging-release": "react-native run-android --variant=stagingRelease --appId=io.epns.epnsstaging",
+    "android:staging-debug-apk": "cd android && ./gradlew assembleStagingDebug && cd ..",
+    "android:staging-release-apk": "cd android && ./gradlew assembleStagingRelease && cd ..",
+    "android:staging-debug-aab": "cd android && ./gradlew bundleStagingDebug && cd ..",
+    "android:staging-release-aab": "cd android && ./gradlew bundleStagingRelease && cd ..",
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
