--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@reduxjs/toolkit": "^1.8.5",
     "@shopify/flash-list": "^1.4.0",
     "@tradle/react-native-http": "^2.0.1",
-    "@unstoppabledomains/resolution": "2.1.1",
+    "@unstoppabledomains/resolution": "^9.0.0",
     "@walletconnect/react-native-dapp": "1.8.0",
     "@walletconnect/web3-provider": "^1.8.0",
     "add": "^2.0.6",
