env update: infura api uri removed

--- a/.env.staging.sample
+++ b/.env.staging.sample
@@ -1,18 +1,15 @@
-# INFURA API
-TESTNET_INFURA_API=
-
-# MEDIA RELATED
-YOUTUBE_API_KEY=
+# RPC
+INFURA_PROJECT_ID=
+INFURA_PROJECT_SECRET=
 
 # APP VERSION
 APP_VERSION=
-ETHERSCAN_API=
-INFURA_PROJECT_ID=
-INFURA_PROJECT_SECRET=
-ALCHEMY_API=
 
 # SOCKETS
 SOCKET_KEY_STAGING=
+
+# MEDIA RELATED
+YOUTUBE_API_KEY=
 
 # APP ENV
 PROD_ENV=false
