--- a/.env.prod.sample
+++ b/.env.prod.sample
@@ -1,15 +1,12 @@
-# INFURA API
-MAINNET_INFURA_API=
+# RPC
+INFURA_PROJECT_ID=
+INFURA_PROJECT_SECRET=
 
 # MEDIA RELATED
 YOUTUBE_API_KEY=
 
 # APP VERSION
 APP_VERSION=
-ETHERSCAN_API=
-INFURA_PROJECT_ID=
-INFURA_PROJECT_SECRET=
-ALCHEMY_API=
 
 # SOCKETS
 SOCKET_KEY_PROD=
