--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -182,7 +182,7 @@ android {
             minSdkVersion rootProject.ext.minSdkVersion
             applicationId "io.epns.epns"
             targetSdkVersion rootProject.ext.targetSdkVersion
-            resValue "string", "build_config_package", "io.epns.epnsstaging"
+            resValue "string", "build_config_package", "io.epns.epns"
             versionCode 63
             versionName "0.8.6"
         }
@@ -190,7 +190,7 @@ android {
             minSdkVersion rootProject.ext.minSdkVersion
             applicationId "io.epns.epnsstaging"
             targetSdkVersion rootProject.ext.targetSdkVersion
-            resValue "string", "build_config_package", "io.epns.epnsstaging"
+            resValue "string", "build_config_package", "io.epns.epns"
             versionCode 18
             versionName "0.8.2"
         }
