--- a/ios/epns.xcodeproj/xcshareddata/xcschemes/epns.xcscheme
+++ b/ios/epns.xcodeproj/xcshareddata/xcschemes/epns.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "EPNS Staging.app"
+               BuildableName = "Push (EPNS).app"
                BlueprintName = "push"
-               ReferencedContainer = "container:epnsstaging.xcodeproj">
+               ReferencedContainer = "container:epns.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "EPNS Staging.app"
+            BuildableName = "Push (EPNS).app"
             BlueprintName = "push"
-            ReferencedContainer = "container:epnsstaging.xcodeproj">
+            ReferencedContainer = "container:epns.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "EPNS Staging.app"
+            BuildableName = "Push (EPNS).app"
             BlueprintName = "push"
-            ReferencedContainer = "container:epnsstaging.xcodeproj">
+            ReferencedContainer = "container:epns.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
