--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "node-libs-browser": "^2.2.1",
     "react": "18.0.0",
     "react-native": "0.69.4",
+    "react-native-callkeep": "4.3.8",
     "react-native-config": "^1.5.0",
     "react-native-crypto": "^2.2.0",
     "react-native-encrypted-storage": "^4.0.2",
