--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "@giphy/react-native-sdk": "^1.11.1",
     "@metamask/eth-sig-util": "^5.0.0",
     "@notifee/react-native": "^5.7.0",
-    "@pushprotocol/socket": "latest",
     "@pushprotocol/restapi": "1.2.15",
+    "@pushprotocol/socket": "latest",
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-clipboard/clipboard": "^1.11.1",
     "@react-native-community/masked-view": "^0.1.11",
@@ -117,6 +117,7 @@
     "styled-components": "^5.3.5",
     "text-encoding": "^0.7.0",
     "url": "^0.10.3",
+    "uuid": "^9.0.0",
     "web3": "^1.7.5",
     "yarn": "^1.22.19"
   },
@@ -131,6 +132,7 @@
     "@types/react-native-webrtc": "^1.75.5",
     "@types/react-test-renderer": "^18.0.0",
     "@types/simple-peer": "^9.11.5",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
     "babel-jest": "^26.6.3",
