feat: walletconnect v2 migration done

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@notifee/react-native": "^5.7.0",
     "@pushprotocol/restapi": "1.2.15",
     "@pushprotocol/socket": "latest",
-    "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-native-async-storage/async-storage": "^1.18.2",
     "@react-native-clipboard/clipboard": "^1.11.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "15.4.0",
@@ -42,8 +42,8 @@
     "@shopify/flash-list": "^1.4.0",
     "@tradle/react-native-http": "^2.0.1",
     "@unstoppabledomains/resolution": "^9.0.0",
-    "@walletconnect/react-native-dapp": "1.8.0",
-    "@walletconnect/web3-provider": "^1.8.0",
+    "@walletconnect/encoding": "^1.0.2",
+    "@walletconnect/modal-react-native": "^1.0.0-rc.3",
     "add": "^2.0.6",
     "assert": "^1.5.0",
     "axios": "^0.27.2",
@@ -80,7 +80,7 @@
     "react-native-encrypted-storage": "^4.0.2",
     "react-native-fast-openpgp": "^2.4.2",
     "react-native-gesture-handler": "^2.5.0",
-    "react-native-get-random-values": "^1.8.0",
+    "react-native-get-random-values": "^1.9.0",
     "react-native-hash": "^3.0.0",
     "react-native-image-viewing": "^0.2.2",
     "react-native-incall-manager": "^4.0.1",
@@ -88,6 +88,7 @@
     "react-native-level-fs": "^3.0.1",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-material-menu": "^2.0.0",
+    "react-native-modal": "^13.0.1",
     "react-native-os": "^1.2.6",
     "react-native-paper": "^4.12.4",
     "react-native-parsed-text": "^0.0.22",
@@ -101,8 +102,7 @@
     "react-native-simple-toast": "^1.1.4",
     "react-native-sqlite-2": "^3.6.1",
     "react-native-status-bar-height": "^2.6.0",
-    "react-native-svg": "9.6.4",
-    "react-native-svg-uri": "^1.2.3",
+    "react-native-svg": "^13.9.0",
     "react-native-tcp": "^3.2.1",
     "react-native-udp": "4.1.5",
     "react-native-video": "^6.0.0-alpha.1",
