--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "node-libs-browser": "^2.2.1",
     "react": "18.0.0",
     "react-native": "0.69.4",
+    "react-native-callkeep": "4.3.8",
     "react-native-config": "^1.5.0",
     "react-native-crypto": "^2.2.0",
     "react-native-encrypted-storage": "^4.0.2",
@@ -82,6 +83,7 @@
     "react-native-get-random-values": "^1.9.0",
     "react-native-hash": "^3.0.0",
     "react-native-image-viewing": "^0.2.2",
+    "react-native-incall-manager": "^4.0.1",
     "react-native-keychain": "^8.1.1",
     "react-native-level-fs": "^3.0.1",
     "react-native-linear-gradient": "^2.6.2",
@@ -129,6 +131,7 @@
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.69.3",
+    "@types/react-native-incall-manager": "^3.2.1",
     "@types/react-native-webrtc": "^1.75.5",
     "@types/react-test-renderer": "^18.0.0",
     "@types/simple-peer": "^9.11.5",
