--- a/ios/push.prod-Info.plist
+++ b/ios/push.prod-Info.plist
@@ -64,5 +64,10 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>voip</string>
+		<string>fetch</string>
+	</array>
 </dict>
 </plist>
