--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "react-native-tcp": "^3.2.1",
     "react-native-udp": "4.1.5",
     "react-native-video": "^6.0.0-alpha.1",
+    "react-native-voip-push-notification": "^3.3.2",
     "react-native-webrtc": "^111.0.3",
     "react-native-webview": "^11.26.1",
     "react-native-webview-crypto": "^0.0.25",
