--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "react-native-keychain": "^8.1.1",
     "react-native-level-fs": "^3.0.1",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-localize": "^3.0.2",
     "react-native-material-menu": "^2.0.0",
     "react-native-modal": "^13.0.1",
     "react-native-os": "^1.2.6",
