--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@giphy/react-native-sdk": "^1.11.1",
     "@metamask/eth-sig-util": "^5.0.0",
     "@notifee/react-native": "^5.7.0",
-    "@pushprotocol/restapi": "1.4.3",
+    "@pushprotocol/restapi": "1.4.21",
     "@pushprotocol/socket": "latest",
     "@react-native-async-storage/async-storage": "^1.18.2",
     "@react-native-clipboard/clipboard": "^1.11.1",
@@ -121,12 +121,15 @@
     "text-encoding": "^0.7.0",
     "url": "^0.10.3",
     "uuid": "^9.0.0",
+    "viem": "^1.16.6",
     "web3": "^1.7.5",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
+    "@babel/core": "^7.20.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.18.6",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
     "@react-native-community/eslint-config": "^2.0.0",
     "@trivago/prettier-plugin-sort-imports": "^3.3.0",
     "@tsconfig/react-native": "^2.0.2",
@@ -143,13 +146,13 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.70.3",
+    "metro-react-native-babel-preset": "0.73.10",
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.7.1",
     "react-test-renderer": "18.0.0",
     "rn-nodeify": "^10.3.0",
-    "typescript": "^4.4.4"
+    "typescript": "^5.1.3"
   },
   "jest": {
     "preset": "react-native",
