--- a/.gitignore
+++ b/.gitignore
@@ -239,6 +239,9 @@ RNTester/Pods/*
 /ReactCommon/fabric/components/rncore/
 /schema-rncore.json
 
+# Temporary files created by Metro to check the health of the file watcher
+.metro-health-check*
+
 # Sensitive Files
 .env
 .env.prod
