--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@ethersproject/shims": "^5.7.0",
     "@expo/vector-icons": "^13.0.0",
     "@giphy/react-native-sdk": "^3.2.0",
-    "@kalashshah/react-native-sdk": "^0.1.11",
+    "@kalashshah/react-native-sdk": "0.1.15",
     "@metamask/eth-sig-util": "^5.0.0",
     "@notifee/react-native": "^7.8.0",
     "@pushprotocol/restapi": "1.4.28",
