--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/stack": "^6.2.3",
     "@reduxjs/toolkit": "^1.8.5",
-    "@shopify/flash-list": "^1.4.0",
+    "@shopify/flash-list": "^1.6.3",
     "@tradle/react-native-http": "^2.0.1",
     "@unstoppabledomains/resolution": "^9.0.0",
     "@walletconnect/encoding": "^1.0.2",
@@ -82,6 +82,7 @@
     "react-native-gesture-handler": "~2.9.0",
     "react-native-get-random-values": "^1.9.0",
     "react-native-hash": "^3.0.0",
+    "react-native-image-picker": "^7.1.0",
     "react-native-image-viewing": "^0.2.2",
     "react-native-incall-manager": "^4.0.1",
     "react-native-keychain": "^8.1.1",
@@ -115,6 +116,7 @@
     "react-redux": "^8.0.2",
     "readable-stream": "^1.0.33",
     "redux-persist": "^6.0.0",
+    "rn-tooltip": "^3.0.3",
     "secp256k1-v4": "https://github.com/HarshRajat/secp256k1-node",
     "simple-peer": "^9.11.1",
     "stream-browserify": "^1.0.0",
