feat: upgrade to stream apis

--- a/package.json
+++ b/package.json
@@ -27,10 +27,9 @@
     "@ethersproject/shims": "^5.7.0",
     "@expo/vector-icons": "^13.0.0",
     "@giphy/react-native-sdk": "^3.2.0",
-    "@kalashshah/react-native-sdk": "0.1.15",
     "@metamask/eth-sig-util": "^5.0.0",
     "@notifee/react-native": "^7.8.0",
-    "@pushprotocol/restapi": "1.4.28",
+    "@pushprotocol/restapi": "^1.6.3",
     "@pushprotocol/socket": "latest",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-clipboard/clipboard": "^1.11.1",
