--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "react-native-gesture-handler": "~2.9.0",
     "react-native-get-random-values": "^1.9.0",
     "react-native-hash": "^3.0.0",
+    "react-native-hole-view": "^3.0.0-alpha4",
     "react-native-image-picker": "^7.1.0",
     "react-native-image-viewing": "^0.2.2",
     "react-native-incall-manager": "^4.0.1",
