--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ethersproject/shims": "^5.7.0",
     "@expo/vector-icons": "^13.0.0",
     "@giphy/react-native-sdk": "^3.2.0",
+    "@gorhom/bottom-sheet": "^4",
     "@metamask/eth-sig-util": "^5.0.0",
     "@notifee/react-native": "^7.8.0",
     "@pushprotocol/restapi": "^1.6.3",
@@ -96,6 +97,7 @@
     "react-native-peerjs": "^1.0.4",
     "react-native-progress-circle": "^2.1.0",
     "react-native-randombytes": "^3.6.1",
+    "react-native-reanimated": "^3.7.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "~3.20.0",
