--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^18.6.0",
     "@react-native-firebase/messaging": "^18.6.0",
-    "@react-navigation/material-bottom-tabs": "^6.2.3",
+    "@react-navigation/bottom-tabs": "^6.5.19",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/stack": "^6.2.3",
     "@reduxjs/toolkit": "^1.8.5",
@@ -58,7 +58,7 @@
     "expo": "^48.0.0",
     "expo-av": "~13.2.1",
     "expo-barcode-scanner": "~12.3.2",
-    "expo-blur": "~12.2.2",
+    "expo-blur": "^12.9.2",
     "expo-build-properties": "~0.6.0",
     "expo-camera": "~13.2.1",
     "expo-device": "~5.2.1",
@@ -92,6 +92,7 @@
     "react-native-material-menu": "^2.0.0",
     "react-native-modal": "^13.0.1",
     "react-native-os": "^1.2.6",
+    "react-native-pager-view": "^6.2.3",
     "react-native-paper": "^4.12.4",
     "react-native-parsed-text": "^0.0.22",
     "react-native-peerjs": "^1.0.4",
@@ -105,6 +106,7 @@
     "react-native-sqlite-2": "^3.6.1",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "13.4.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-tcp": "^3.2.1",
     "react-native-udp": "4.1.5",
     "react-native-video": "^6.0.0-alpha.1",
