--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-clipboard/clipboard": "^1.11.1",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/netinfo": "^11.3.1",
     "@react-native-firebase/app": "^18.6.0",
     "@react-native-firebase/messaging": "^18.6.0",
     "@react-navigation/material-bottom-tabs": "^6.2.3",
