--- a/ios/push.prod-Info.plist
+++ b/ios/push.prod-Info.plist
@@ -53,6 +53,10 @@
 		<string>remote-notification</string>
 		<string>voip</string>
 	</array>
+	<key>NSUserActivityTypes</key>
+	<array>
+		<string>INSendMessageIntent</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
