--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@giphy/react-native-sdk": "^3.2.0",
     "@gorhom/bottom-sheet": "^4",
     "@metamask/eth-sig-util": "^5.0.0",
-    "@notifee/react-native": "^7.8.0",
+    "@notifee/react-native": "^7.8.2",
     "@pushprotocol/restapi": "^1.6.3",
     "@pushprotocol/socket": "latest",
     "@react-native-async-storage/async-storage": "1.17.11",
@@ -66,6 +66,7 @@
     "expo-device": "~5.2.1",
     "expo-file-system": "~15.2.2",
     "expo-linear-gradient": "~12.1.2",
+    "expo-linking": "~4.0.1",
     "expo-local-authentication": "~13.3.0",
     "expo-permissions": "~14.1.1",
     "expo-sharing": "~11.2.2",
