feat: add notifee extension

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -99,10 +99,9 @@ abstract_target 'PushCommonPods' do
   
 end
 
-# $NotifeeExtension = true
+$NotifeeExtension = true
 
-# target 'NotifeeNotificationService' do
-#   use_frameworks!
-#   pod 'RNNotifeeCore', :path => '../node_modules/@notifee/react-native/RNNotifeeCore.podspec'
-# end
-
+target 'NotifeeNotificationService' do
+  use_frameworks!
+  pod 'RNNotifeeCore', :path => '../node_modules/@notifee/react-native/RNNotifeeCore.podspec'
+end
