--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@gorhom/bottom-sheet": "^4",
     "@metamask/eth-sig-util": "^5.0.0",
     "@notifee/react-native": "^7.8.2",
-    "@pushprotocol/restapi": "^1.6.3",
+    "@pushprotocol/restapi": "^1.7.11",
     "@pushprotocol/socket": "latest",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-clipboard/clipboard": "^1.11.1",
@@ -135,6 +135,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@babel/plugin-transform-flow-strip-types": "^7.24.1",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@react-native-community/eslint-config": "^3.2.0",
