--- a/.gitignore
+++ b/.gitignore
@@ -242,6 +242,9 @@ RNTester/Pods/*
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
 
+# yarn
+.yarn/*
+
 # Sensitive Files
 .env
 .env.prod
