--- a/package.json
+++ b/package.json
@@ -191,17 +191,17 @@
     "fs": "react-native-level-fs"
   },
   "browser": {
-    "crypto": "react-native-crypto",
-    "_stream_transform": "readable-stream/transform",
-    "_stream_readable": "readable-stream/readable",
-    "_stream_writable": "readable-stream/writable",
     "_stream_duplex": "readable-stream/duplex",
     "_stream_passthrough": "readable-stream/passthrough",
-    "stream": "stream-browserify",
-    "net": "react-native-tcp",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_writable": "readable-stream/writable",
+    "crypto": "react-native-crypto",
+    "fs": "react-native-level-fs",
     "http": "@tradle/react-native-http",
     "https": "https-browserify",
+    "net": "react-native-tcp",
     "os": "react-native-os",
-    "fs": "react-native-level-fs"
+    "stream": "stream-browserify"
   }
 }
