--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,7 +1,7 @@
 
-  # RN FIREBASE addon
-  $RNFirebaseAsStaticFramework = true
-  # RN FIREBASE addon ends
+# RN FIREBASE addon
+$RNFirebaseAsStaticFramework = true
+# RN FIREBASE addon ends
 
 require File.join(File.dirname(`node --print "require.resolve('expo/package.json')"`), "scripts/autolinking")
 require_relative '../node_modules/react-native/scripts/react_native_pods'
@@ -99,9 +99,9 @@ abstract_target 'PushCommonPods' do
   
 end
 
-$NotifeeExtension = true
+# $NotifeeExtension = true
 
-target 'NotifeeNotificationService' do
-  use_frameworks!
-  pod 'RNNotifeeCore', :path => '../node_modules/@notifee/react-native/RNNotifeeCore.podspec'
-end
+# target 'NotifeeNotificationService' do
+  # use_frameworks!
+  # pod 'RNNotifeeCore', :path => '../node_modules/@notifee/react-native/RNNotifeeCore.podspec'
+# end
