--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "expo-sharing": "~11.2.2",
     "https-browserify": "^1.0.0",
     "immer": "^10.0.2",
+    "lottie-react-native": "^6.7.2",
     "moment": "^2.29.4",
     "node-libs-browser": "^2.2.1",
     "react": "18.2.0",
