--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "node-libs-browser": "^2.2.1",
     "react": "18.2.0",
     "react-native": "0.71.14",
+    "react-native-cache": "^2.0.3",
     "react-native-callkeep": "4.3.8",
     "react-native-config": "^1.5.0",
     "react-native-crypto": "^2.2.0",
