Android notification permission issue fix

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
   <uses-feature android:name="android.hardware.camera.autofocus"/>
   <uses-feature android:name="android.hardware.audio.output"/>
   <uses-feature android:name="android.hardware.microphone"/>
+  <uses-permission android:name="android.permission.POST_NOTIFICATION"/>
   <queries>
     <intent>
       <action android:name="android.intent.action.VIEW"/>
