--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -38,5 +38,10 @@
         <data android:scheme="app.push.org"/>
       </intent-filter>
     </activity>
+
+    <!-- Notification icon -->
+     <meta-data 
+        android:name="com.google.firebase.messaging.default_notification_icon"
+        android:resource="@mipmap/ic_notification" />
   </application>
 </manifest>
