--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
   <uses-feature android:name="android.hardware.audio.output"/>
   <uses-feature android:name="android.hardware.microphone"/>
   <uses-permission android:name="android.permission.POST_NOTIFICATION"/>
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="28" />
   <queries>
     <intent>
       <action android:name="android.intent.action.VIEW"/>
